EasyUI 1.4.3美化版 添加导航菜单

--- a/jQuery EasyUI(1.4.3)/Index.html
+++ b/jQuery EasyUI(1.4.3)/Index.html
@@ -3,8 +3,41 @@
 <head>
     <title>主框架</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+    <link href="resource/themes/default/easyui.css" rel="stylesheet" type="text/css">
+    <link href="resource/themes/icon.css" rel="stylesheet" type="text/css">
+    <link href="resource/ext-themes/default/ext-easyui.css" rel="stylesheet" type="text/css">
+    <link href="resource/ext-themes/ext-icon.css" rel="stylesheet" type="text/css">
+    <link href="resource/icons/icon-all.min.css" rel="stylesheet" type="text/css">
+    <link href="jScrollPane/css/jquery.jscrollpane.css" rel="stylesheet" type="text/css">
+    <link href="resource/ehome/ehome.css" rel="stylesheet" type="text/css">
+    <script src="resource/jquery.min.js" type="text/javascript"></script>
+    <script src="resource/jquery.easyui.min.js" type="text/javascript"></script>
+    <script src="resource/locale/easyui-lang-zh_CN.js" type="text/javascript"></script>
+    <script src="jScrollPane/js/jquery.mousewheel.js" type="text/javascript"></script>
+    <script src="jScrollPane/js/jquery.jscrollpane.min.js" type="text/javascript"></script>
+    <script src="resource/ehome/ehome.js" type="text/javascript"></script>
+    <style type="text/css">
+        body {
+            margin: 0;
+            padding: 0
+        }
+    </style>
 </head>
-<body>
+<body class="easyui-layout" id="main-layout">
+<div data-options="region:'north',split:true" style="height:100px;">XXX后台管理</div>
+<div data-options="region:'west',title:'导航菜单',iconCls:'icon-metro-list2',split:true,href:'nav.html',
+        tools:[{
+                iconCls:'icon-metro-spinner5',
+                handler:function(){$('#main-layout').layout('panel','west').panel('refresh');}
+        }]" id="nav-west" style="width:210px;">
+</div>
+<div data-options="region:'center',fit:true" style="padding:0;">显示区域</div>
 
+<script type="text/javascript">
+    $(function () {
+        // 设置导航菜单滚动条样式
+        $("#nav-west").jScrollPane();
+    });
+</script>
 </body>
 </html>
