--- a/MyPage/Form表单.html
+++ b/MyPage/Form表单.html
@@ -29,8 +29,34 @@
             margin-bottom: 8px;
         }
     </style>
+    <script type="text/javascript" src="resource/js/jquery-1.11.0.js"></script>
+    <style type="text/css">
+        .hide{display: none;}
+        .show{display: block;}
+        #icon-container{width: 460px;height:200px;border:1px solid #ccc;background-color:#fff;position:absolute;border-radius:3px;-moz-border-radius:3px;-webkit-border-radius:3px;}
+        #icon-container > #icon-container-body{width:100%;height:170px;border-bottom:1px solid #ccc}
+        #icon-container > #icon-container-bottom{width:100%;height:30px;padding-left:6px;}
+
+        #icon-container > #icon-container-bottom > .icon-tab {
+            border-right: 1px solid dodgerblue;
+            float: left;
+            width: 50px;
+            height: 30px;
+            line-height: 30px;
+            text-align: center;
+            font-family: "微软雅黑",serif;
+            cursor:pointer;
+        }
+        .unactive{background-color: lightgrey;font-size:12px;}
+        .active{
+            background-color: grey;
+            font-size: 14px;
+            margin-top: -1px;
+            border-top: 1px solid grey;
+        }
+    </style>
 </head>
-<body>
+<body class="body">
 <fieldset style="width: 97.76%;min-width: 500px">
     <legend>租户信息表单</legend>
     <form id="tenantFm" class="warp">
@@ -56,11 +82,56 @@
             <label for="description" style="position: absolute;left: 0;bottom: 50%;height: 20px;margin-bottom: -10px;">备注说明:</label>
             <textarea id="description" name="description" style="width: 680px;height: 100px;margin-left: -10px"></textarea>
         </div>
+        <div>
+            <label for="icon">图标:</label><input id="icon" name="icon" type="text" onfocus="showIcons(this)"/>
+        </div>
         <div style="text-align: center;">
             <a href="#" id="saveBtn" class="easyui-linkbutton">保 存</a>&nbsp;
             <a href="#" id="cancelBtn" class="easyui-linkbutton">取 消</a>
         </div>
     </form>
 </fieldset>
+<div id="icon-container" class="hide">
+    <div id="icon-container-body">
+        图标...
+    </div>
+    <div id="icon-container-bottom">
+        <div class="icon-tab unactive active">扁平</div>
+        <div class="icon-tab unactive">立体</div>
+        <div class="icon-tab unactive">其它1</div>
+        <div class="icon-tab unactive">其它2</div>
+        <div class="icon-tab unactive">其它3</div>
+    </div>
+</div>
+
+<script type="text/javascript">
+    $(function () {
+        bindEvent();
+    });
+
+    function bindEvent() {
+        $("#icon-container").find("> #icon-container-bottom > .icon-tab").bind("click", setIconTabStyle);
+        $("#icon-container").bind("mouseover", function () {
+            $("#icon").unbind("blur");
+        }).bind("mouseout", function () {
+//            $("#icon").bind("blur", hideIcons).focus();
+        });
+    }
+
+    function showIcons(thus) {
+        $("#icon-container").removeClass("hide").addClass("show")
+                .css("top", $(thus).offset().top - 8 - 200)
+                .css("left", $(thus).offset().left);
+    }
+    
+    function hideIcons() {
+        $("#icon-container").removeClass("show").addClass("hide");
+    }
+    
+    function setIconTabStyle() {
+        $(this).siblings().removeClass("active").addClass("unactive");
+        $(this).removeClass("unactive").addClass("active");
+    }
+</script>
 </body>
 </html>
