--- a/jwplayer/demo-rtmp_2.html
+++ b/jwplayer/demo-rtmp_2.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>jwplayer-rtmp</title>
-    <link rel="stylesheet" href="skins/five.css">
+    <link rel="stylesheet" href="skins/vapor.css">
     <script type="text/javascript" src="jwplayer.js"></script>
     <script type="text/javascript">
         jwplayer.key = "iP+vLYU9H5KyhZeGt5eVuJJIoULUjltoaMeHXg==";
@@ -19,7 +19,13 @@
         height: '360',
         width: '100%',
         controlbar: 'bottom',
-        autostart: true
+        autostart: true,
+        skin: {
+            name: 'vapor'
+        },
+        logo: {
+            file: 'logo-live.png'
+        }
     });
 </script>
 </body>
