--- a/jwplayer/demo-rtmp_2.html
+++ b/jwplayer/demo-rtmp_2.html
@@ -25,7 +25,10 @@
         },
         logo: {
             file: 'logo-live.png'
-        }
+        },
+
+        abouttext: '右键后显示的视频相关信息',
+        aboutlink: 'https://www.baidu.com'   // 点击视频信息后的链接页面
     });
 </script>
 </body>
