--- a/jwplayer/demo-rtmp_1.html
+++ b/jwplayer/demo-rtmp_1.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>jwplayer-rtmp</title>
-    <link rel="stylesheet" href="skins/five.css">
+    <title>jwplayer-rtmp-1</title>
     <script type="text/javascript" src="jwplayer-2.js"></script>
 </head>
 <body>
+<div style="margin-bottom:10px;font-weight:bold;color:#d41046;">播放rtmp协议的视频：方式1（版本:5.10.2295）</div>
 <div id="player">正在连接...</div>
 
 <script type="text/javascript">
