--- a/jwplayer/demo-rtmp_2.html
+++ b/jwplayer/demo-rtmp_2.html
@@ -16,11 +16,12 @@
 <script type="text/javascript">
     jwplayer("player").setup({
         flashplayer: 'jwplayer.flash.swf',
-        file: 'rtmp://192.168.1.2:1935/test/wsznhw',
+        file: 'rtmp://192.168.1.2:1935/test/ghyjn',
         height: '360',
         width: '100%',
         controlbar: 'bottom',
         autostart: true,
+        volume: 36,
         skin: {
             name: 'vapor'
         },
