--- a/jwplayer/demo-http.html
+++ b/jwplayer/demo-http.html
@@ -21,6 +21,7 @@
         width: '100%',
         controlbar: 'bottom',
         autostart: true,
+        volume: 36,
         skin: {
             name: 'vapor'
         },
